added spring 6, hibernate 6 and struts 2 lts fix